--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,14 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.github.smart-fun:XmlToJson:1.4.5' //added
-    implementation 'androidx.cardview:cardview:1.0.0' //added
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'//added
-    implementation 'com.android.volley:volley:1.1.1' //added
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    
+    // TO ADD:
+    implementation 'com.github.smart-fun:XmlToJson:1.4.5'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
