--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io" } //needed to download XmlToJson Library
         google()
         jcenter()
     }
